# kalarm

./: .craft.ini  .gitlab-ci.yml  .kateconfig  .kde-ci.yml  .krazy  .reviewboardrc  ACKNOWLEDGEMENTS  AUTHORS  BUGS  CMakeLists.txt  CMakePresets.json  CODING_STYLE  ChangeLog  Changelog  DESIGN-kalarmcalendar.html  DESIGN.html  INSTALL  KF5AlarmCalendarConfig.cmake.in  KF5KAlarmCalConfig.cmake.in  MAINTAINERS  Mainpage.dox  Makefile.am  Messages.sh  README  akonadimodel.cpp  akonadimodel.h  akonadiresourcecreator.cpp  akonadiresourcecreator.h  alarmcalendar.cpp  alarmcalendar.h  alarmevent.cpp  alarmevent.h  alarmlistdelegate.cpp  alarmlistdelegate.h  alarmlistfiltermodel.cpp  alarmlistfiltermodel.h  alarmlistview.cpp  alarmlistview.h  alarmtext.cpp  alarmtext.h  (+213 more)
akonadi/: CMakeLists.txt  Messages.sh  akonadi_serializer_kalarm.cpp  akonadi_serializer_kalarm.desktop  akonadi_serializer_kalarm.h  compatibilityattribute.cpp  compatibilityattribute.h  eventattribute.cpp  eventattribute.h  kaeventformatter.cpp  kaeventformatter.h  kalarm-mime.xml  kalarmmimetypevisitor.h  kalarmresource.cpp  kalarmresource.desktop  kalarmresource.h  kalarmresource.kcfg  kalarmresource_active.desktop  kalarmresource_archived.desktop  kalarmresource_template.desktop  settings.kcfgc
akonadi/common/: Messages.sh  alarmtyperadiowidget.cpp  alarmtyperadiowidget.h  alarmtyperadiowidget.ui  alarmtypewidget.cpp  alarmtypewidget.h  alarmtypewidget.ui  kalarmresourcecommon.cpp  kalarmresourcecommon.h
akonadi/kalarm/: CMakeLists.txt  Messages.sh  kalarmresource.cpp  kalarmresource.desktop  kalarmresource.h  kalarmresource.kcfg  kalarmresource_active.desktop  kalarmresource_archived.desktop  kalarmresource_template.desktop
akonadi/kalarmdir/: CMakeLists.txt  Messages.sh  kalarmdirresource.cpp  kalarmdirresource.desktop  kalarmdirresource.h  settings.kcfgc  (+4 more)
autostart/: CMakeLists.txt  autostart.cpp  autostart.h  kalarm_autostart_debug.cpp  kalarm_autostart_debug.h
autotests/: CMakeLists.txt  kadatetimetest.cpp  kadatetimetest.h  kaeventtest.cpp  kaeventtest.h
cal/: CMakeLists.txt  alarmtext.cpp  alarmtext.h  collectionattribute.cpp  collectionattribute.h  compatibilityattribute.cpp  compatibilityattribute.h  datetime.cpp  datetime.h  eventattribute.cpp  eventattribute.h  identities.cpp  identities.h  kacalendar.cpp  kacalendar.h  kaevent.cpp  kaevent.h  kaeventdata.cpp  kaeventdata.h  kalarm_cal_export.h  karecurrence.cpp  karecurrence.h  kcalcore_constptr.h  kcalendar.cpp  kcalendar.h  repetition.cpp  repetition.h  version.cpp  version.h
kalarmd/: CMakeLists.txt  Mainpage.dox  Makefile.am  adapp.cpp  adapp.h  adcalendar.cpp  adcalendar.h  adcalendarbase.cpp  adcalendarbase.h  adconfigdata.cpp  adconfigdata.h  adconfigdatabase.cpp  adconfigdatabase.h  admain.cpp  alarmdaemon.cpp  alarmdaemon.h  alarmdaemoniface.h  alarmguiiface.h  clientinfo.cpp  clientinfo.h  kalarmd.autostart.desktop  kalarmd.desktop  kalarmd.h  kalarmdrc  org.kde.kalarm.daemon.Daemon.xml  org.kde.kalarm.kalarmd.Daemon.xml  org.kde.kalarmd.Daemon.xml  org.kde.kalarmd.daemon.xml
lib/: CMakeLists.txt  Mainpage.dox  Makefile.am  autodeletelist.h  autoqpointer.h  buttongroup.cpp  buttongroup.h  checkbox.cpp  checkbox.h  colourbutton.cpp  colourbutton.h  colourcombo.cpp  colourcombo.h  colourlist.cpp  colourlist.h  combobox.cpp  combobox.h  dateedit.cpp  dateedit.h  datetime.cpp  datetime.h  desktop.cpp  desktop.h  filedialog.cpp  filedialog.h  groupbox.cpp  groupbox.h  identities.h  itembox.cpp  itembox.h  kalocale.cpp  kalocale.h  label.cpp  label.h  lineedit.cpp  lineedit.h  locale.cpp  locale.h  localefuncs.cpp  localefuncs.h  (+30 more)
libkmime/: Makefile.am  README  kmime_codec_base64.cpp  kmime_codec_base64.h  kmime_codec_qp.cpp  kmime_codec_qp.h  kmime_codec_uuencode.cpp  kmime_codec_uuencode.h  kmime_codecs.cpp  kmime_codecs.h  kmime_header_parsing.cpp  kmime_header_parsing.h  kmime_util.cpp  kmime_util.h  kmime_warning.h
resources/: CMakeLists.txt  alarmresource.cpp  alarmresource.h  alarmresources.cpp  alarmresources.h  kalarm_export.h  kalarm_manager.desktop  kalarm_resources_export.h  kcal.cpp  kcal.h  kcalendar.cpp  kcalendar.h  local.desktop  localdir.desktop  remote.desktop  resourcelocal.cpp  resourcelocal.h  resourcelocal_plugin.cpp  resourcelocaldir.cpp  resourcelocaldir.h  resourcelocaldir_plugin.cpp  resourcelocaldirwidget.cpp  resourcelocaldirwidget.h  resourcelocalwidget.cpp  resourcelocalwidget.h  resourceremote.cpp  resourceremote.h  resourceremote_plugin.cpp  resourceremotewidget.cpp  resourceremotewidget.h  resourcewidget.cpp  resourcewidget.h
serializers/: CMakeLists.txt  Messages.sh  akonadi_serializer_kalarm.cpp  akonadi_serializer_kalarm.desktop  akonadi_serializer_kalarm.h  kaeventformatter.cpp  kaeventformatter.h
src/: CMakeLists.txt  Mainpage.dox  Messages.sh  akonadi.cpp  akonadi.h  akonadicollectionsearch.cpp  akonadicollectionsearch.h  akonadimodel.cpp  akonadimodel.h  akonadiresourcecreator.cpp  akonadiresourcecreator.h  alarmcalendar.cpp  alarmcalendar.h  alarmlistdelegate.cpp  alarmlistdelegate.h  alarmlistview.cpp  alarmlistview.h  alarmtext.cpp  alarmtext.h  alarmtime.cpp  alarmtime.h  alarmtimewidget.cpp  alarmtimewidget.h  audioplayer.cpp  audioplayer.h  audioplayer_mpv.cpp  audioplayer_mpv.h  audioplayer_vlc.cpp  audioplayer_vlc.h  birthdaydlg.cpp  birthdaydlg.h  birthdaymodel.cpp  birthdaymodel.h  calendardatamodel.cpp  calendardatamodel.h  calendarmigrator.cpp  calendarmigrator.h  collectionattribute.cpp  collectionattribute.h  collectionmodel.cpp  (+160 more)
widgets/: Makefile.am  buttongroup.cpp  buttongroup.h  checkbox.cpp  checkbox.h  colourcombo.cpp  colourcombo.h  colourlist.cpp  colourlist.h  combobox.cpp  combobox.h  dateedit.cpp  dateedit.h  datetime.h  label.cpp  label.h  lineedit.cpp  lineedit.h  messagebox.cpp  messagebox.h  pushbutton.cpp  pushbutton.h  radiobutton.cpp  radiobutton.h  shellprocess.cpp  shellprocess.h  slider.cpp  slider.h  spinbox.cpp  spinbox.h  spinbox2.cpp  spinbox2.h  spinbox2private.h  timeedit.cpp  timeedit.h  timeperiod.cpp  timeperiod.h  timespinbox.cpp  timespinbox.h
(+339 files in other folders)
